--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git@github.com:ndaidong/oembed-parser.git"
   },
   "author": "@ndaidong",
-  "main": "./index.js",
+  "main": "./dist/main.js",
   "engines": {
     "node": ">= 10.14.2"
   },
@@ -20,10 +20,13 @@
     "sync": "node sync",
     "tsc": "tsc --init",
     "build": "tsc",
+    "postinstall": "webpack --mode=production",
     "reset": "node reset"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
     "eslint-config-goes": "^1.2.0",
